--- a/leisure/src/main/resources/static/style/cabecalho.css
+++ b/leisure/src/main/resources/static/style/cabecalho.css
@@ -33,6 +33,7 @@
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
+    object-fit: cover;
 }
 
 .container__usuario span {
