--- a/leisure/src/main/resources/static/style/profile-meusdados.css
+++ b/leisure/src/main/resources/static/style/profile-meusdados.css
@@ -14,6 +14,7 @@
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
+    object-fit: cover;
     width: 50px;
     height: 50px;
 }
