--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -273,8 +273,8 @@
 </section>
 
 <!-- MEUS DADOS -->
-<section th:fragment="meusdados" class="meusdados ">
-    <form id="form-imagem" method="post" enctype="multipart/form-data" th:action="@{/usuario/salvar-foto}">
+<section th:fragment="meusdados" class="meusdados">
+    <form id="form-imagem" method="post" enctype="multipart/form-data" th:action="@{/usuario/salvar-foto}" data-form-imagem>
         <input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
         <div class="meusdados__imagem">
 
@@ -283,9 +283,9 @@
                 <img th:src="|http://localhost:8080/usuario/imagem/${usuario.id}|">
             </label>
 
-            <input id="input-file" type="file" name="file" accept="image /*">
+            <input id="input-file" type="file" name="file" accept="image /*" data-input-imagem>
         </div>
-        <button type="submit">Enviar foto</button>
+        <!-- <button type="submit">Enviar foto</button> -->
     </form>
 
     <form class="meusdados__container" method="post" th:action="@{/usuario/atualizacao}">
@@ -312,15 +312,15 @@
                 <input type="password" name="cpf" id="meusdadosCpf" th:value="${usuario.cpf}" disabled>
             </div>
         </div>
-        <input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
+        <!-- <input name="id" th:value="${usuario.id}" id="id_usuario" hidden> -->
         <div class="anuncio__card__botao">
             <button type="submit">
                 <span>Salvar alterações</span>
             </button>
         </div>
     </form>
-    <form method="post" th:action="@{/usuario/deletar}">
+    <!-- <form method="post" th:action="@{/usuario/deletar}">
         <input name="id" th:value="${usuario.id}" id="id_usuario" hidden>
         <button type="submit">Deletar conta</button>
-    </form>
+    </form> -->
 </section>
