--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -29,20 +29,20 @@
                         <span>Categorias <i class="arrow-replace-categoria fa-solid fa-sm fa-chevron-right"></i></span>
 
                         <ul class="lista-menu__sublista-categoria hidden">
-                            <li class="lista-menu__sublista-item">
-                                <a class="container__link" href="#"><span>Apartamentos</span></a>
+                            <li class="lista-menu__sublista-item">                                
+                                    <a class="container__link" th:href="@{/leisure/filtragem}"><span>Apartamentos</span></a>
                             </li>
                             <li class="lista-menu__sublista-item">
-                                <a class="container__link" href="#"><span>Casas</span></a>
+                                <a class="container__link" th:href="@{/leisure/filtragem}"><span>Casas</span></a>
                             </li>
                             <li class="lista-menu__sublista-item">
-                                <a class="container__link" href="#"><span>Sitíos</span></a>
+                                <a class="container__link" th:href="@{/leisure/filtragem}"><span>Sitíos</span></a>
                             </li>
                             <li class="lista-menu__sublista-item">
-                                <a class="container__link" href="#"><span>Terrenos</span></a>
+                                <a class="container__link" th:href="@{/leisure/filtragem}"><span>Terrenos</span></a>
                             </li>
                             <li class="lista-menu__sublista-item">
-                                <a class="container__link" href="#"><span>Corretores</span></a>
+                                <a class="container__link" th:href="@{/leisure/filtragem}"><span>Corretores</span></a>
                             </li>
                         </ul>
                     </li>
